recursion.lessons.recursion.koch.Koch.scala.error
Koch:19: error: ')' expected but ';' found.
		avance(length/(i);
                                 ^Koch:28: error: ';' expected but 'else' found.
	else return;
        ^